# bevy-convars

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bevy-convars/: Cargo.toml  README.md
bevy-convars/cascade/bevy-convars/: Cargo.toml
bevy-convars/cascade/bevy-convars/src/: lib.rs  parse.rs  types.rs
bevy-convars/src/: builtin.rs  defaults.rs  embed.rs  error.rs  examples.md  lib.rs  loader.rs  macros.rs  parse.rs  prelude.rs  reflect.rs  save.rs  tests.rs  types.rs
bevy-convars/src/loader/: assets.rs  cvar_doc.rs  test_document.toml  tests.rs
bevy-convars/src/save/: existing_cfg_1.toml  expected_cfg_1.toml  expected_cfg_2.toml  tests.rs
