[package]
name = "bevy-convars"
version = "0.1.0-prepublish"
edition = "2024"
categories = ["configuration", "bevy"]
keywords = ["config", "configuration", "cvars", "convars", "bevy"]
license = "MIT OR Apache-2.0"

description = "An implementation of convars (config or console variables) for configuring your Bevy application."
repository = "https://github.com/moonheart08/bevy-convars/"
rust-version = "1.85.0"

[dependencies]
bevy_ecs = "0.15.3"
bevy_app = "0.15.3"
bevy_reflect = "0.15.3"
bevy_log = "0.15.3"
bevy_utils = "0.15.3"
thiserror = "2.0"
serde = "1"
static_assertions = "1.1.0"
toml_edit = { version = "0.22", features = ["serde"], optional = true }

[features]
default = ["parse_cvars", "config_loader"]

# Allows parsing convars and convar overrides from TOML.
# Does not enable or disable serde, serde is always present pending a refactor.
parse_cvars = ["dep:toml_edit"]

# Allows bevy-convars to provide CVar loading for you.
config_loader = ["parse_cvars"]
