[package]
name = "bevy-convars"
version = "0.1.0-prepublish"
edition = "2024"
categories = ["configuration", "bevy"]
keywords = ["config", "configuration", "cvars", "convars", "bevy"]
license = "MIT OR Apache-2.0"

description = "An implementation of convars (config or console variables) for configuring your Bevy application."
repository = "https://github.com/moonheart08/bevy-convars/"
rust-version = "1.85.0"

[dependencies]
bevy_ecs = { git = "https://github.com/moonheart08/bevy.git", branch = "2025-07-04-change-detection-added-helpers"}
bevy_app = { git = "https://github.com/moonheart08/bevy.git", branch = "2025-07-04-change-detection-added-helpers"}
bevy_reflect = { git = "https://github.com/moonheart08/bevy.git", branch = "2025-07-04-change-detection-added-helpers"}
bevy_log = { git = "https://github.com/moonheart08/bevy.git", branch = "2025-07-04-change-detection-added-helpers"}
bevy_platform_support = { git = "https://github.com/moonheart08/bevy.git", branch = "2025-07-04-change-detection-added-helpers"}
thiserror = "2.0"
serde = "1"
static_assertions = "1.1.0"
toml_edit = { version = "0.22", features = ["serde"], optional = true }

[features]
default = ["parse_cvars", "config_loader", "config_loader_fs"]

# Allows parsing convars and convar overrides from TOML.
# Does not enable or disable serde, serde is always present pending a refactor.
parse_cvars = ["dep:toml_edit"]

# Allows bevy-convars to provide CVar loading for you.
config_loader = ["parse_cvars"]

# Allow creating the config loader plugin from a list of files on disk.
config_loader_fs = ["config_loader"]