[package]
name = "bevy-convars"
version = "0.1.0-prepublish"
edition = "2024"
categories = ["config", "game-development"]
keywords = ["config", "configuration", "cvars", "convars", "bevy"]
license = "MIT OR Apache-2.0"

description = "An implementation of convars (config or console variables) for configuring your Bevy application."
repository = "https://github.com/transcendental-experiences/bevy-convars"
rust-version = "1.85.0"

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb", optional = true }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb", optional = true }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb" }
bevy_platform_support = { git = "https://github.com/bevyengine/bevy.git", rev = "0410212f3da739fc84f22435d921af81c0ed6abb" }
serde = "1"
static_assertions = "1.1.0"
toml_edit = { version = "0.22", features = ["serde"], optional = true }

[features]
default = ["parse_cvars", "config_loader", "config_loader_fs", "config_loader_asset"]

# Allows parsing convars and convar overrides from TOML.
# Does not enable or disable serde, serde is always present pending a refactor.
parse_cvars = ["dep:toml_edit"]

# Allows bevy-convars to provide CVar loading for you.
config_loader = ["parse_cvars"]

# Allow applying configs from files on disk.
config_loader_fs = ["config_loader"]

# Allows applying configs from bevy Assets.
config_loader_asset = ["config_loader", "dep:bevy_asset", "dep:bevy_tasks"]

# Gates incomplete features. No SemVer guarantees are provided for features within this set.
incomplete = []

# Vendor support feature. You shouldn't use this, as it implies a build setup you don't have.
cascade-support = []