[package]
name = "bevy-convars"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.15.3"
bevy_app = "0.15.3"
bevy_reflect = "0.15.3"
bevy_log = "0.15.3"
bevy_utils = "0.15.3"
thiserror = "2.0"
serde = "1"
toml_edit = { version = "0.22", features = ["serde"], optional = true }

[features]
default = ["parse_cvars", "config_loader"]

# Allows parsing convars and convar overrides from TOML.
# Does not enable or disable serde, serde is always present pending a refactor.
parse_cvars = ["dep:toml_edit"]

# Allows bevy-convars to provide CVar loading for you.
config_loader = ["parse_cvars"]
